[S016] - fixed scroll color on mobile

--- a/source/css/_partial/mobile.styl
+++ b/source/css/_partial/mobile.styl
@@ -286,6 +286,11 @@
 .scroll {
     bottom: 0
     a {
+        &:hover {
+            .fa {
+                color: rgba(147, 181, 224, .8);
+            }
+        }
         background-color: rgba(63, 63, 63, 0)
     }
 }
